-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 7.0.1
-
dd5eed0b3 (master)
In a Qt 6 based Qt Creator, the lower border of filter edits in the toolbars is missing. This was not the case with Qt 5 builds of Qt Creator.
Also, the hover rect is only drawn partially.
For Gerrit Dashboard: QTCREATORBUG-27510 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
472982,4 | Utils: Fix painting artifacts of FancyLineEdit on StyledBar | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |